SCRUM-54 fixing some layout bugs

--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -14,7 +14,7 @@
         width: calc(100% - 100px);
         max-width: 1500px;
         position: relative;
-        z-index: 10;
+        z-index: 20;
     }
     .checked-in-banner{
         position: absolute;
